test_data/streamwalk/invalid/syntax/07_expected_comma_or_end_array.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

[1 2]

# EXPECTED

ERROR expected_comma_or_end_array offset=3
